# mlzoomcamp_mid_project

./: .dockerignore.gitignore  .gcloudignore  Dockerfile  README.md  app.yaml  aws-ecs-task-definition.json  cloudbuild.yaml  compare_models.py  deploy_aws.sh  deploy_gcp.sh  docker.dockerfile  dockerfile_lambda  dv.pkl  fly.toml  main.py  mid_project.ipynb  model.pkl  model_comparison_20260105_124609.csv  model_comparison_20260105_124609.json  predict.py  pyproject.toml  requirements.txt  start.sh  test.py  train.py
app/: models.py  schemas.py
