[project]
name = "stroke-prediction"
version = "1.0.0"
description = "Stroke Prediction API using FastAPI and XGBoost"
authors = [
    {name = "Liting Liu", email = "Liting.liu.work@gmail.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "xgboost>=1.7.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"